# opencoders

./: .gitignore  AGENTS.md  ASYNC_ARCHITECTURE.md  Cargo.toml  Makefile  README.md  TESTING_VALIDATION.md  capture-edits.pcap  capture-logging.pcap  capture-question.pcap  example-claude.txt  example-gemini.txt  example-opencode.txt  example-tool-parts.txt  openapi.json
.claude/: settings.local.json
assets/: openapi.json
opencode-sdk/: README.md
opencode-sdk/.openapi-generator/: FILES
opencode-sdk/src/apis/: default_api.rs
opencode-sdk/src/models/: agent.rs  agent_config.rs  agent_mode.rs  agent_part.rs  agent_part_input.rs  agent_permission.rs  agent_permission_edit.rs  api_auth.rs  app_time.rs  assistant_message.rs  assistant_message_error.rs  auth.rs  config.rs  config_agent.rs  config_experimental.rs  config_formatter_value.rs  config_lsp_value.rs  config_lsp_value_any_of.rs  config_lsp_value_any_of_1.rs  config_mcp_value.rs  config_permission.rs  config_permission_bash.rs  config_permission_edit.rs  config_provider_value.rs  config_provider_value_models_value.rs  config_provider_value_models_value_cost.rs  config_provider_value_models_value_limit.rs  config_provider_value_options.rs  config_tui.rs  event.rs  event_ide_installed_properties.rs  event_period_file_period_edited.rs  event_period_file_period_watcher_period_updated.rs  event_period_ide_period_installed.rs  event_period_installation_period_updated.rs  event_period_lsp_period_client_period_diagnostics.rs  event_period_message_period_part_period_removed.rs  event_period_message_period_part_period_updated.rs  event_period_message_period_removed.rs  event_period_message_period_updated.rs  (+66 more)
scripts/: generate-openapi.sh  generate-sdk.sh  run-smoke-tests.sh
src/: lib.rs  main.rs
src/app/: app_program.rs  error.rs  event_async_task_manager.rs  event_msg.rs  event_subscriptions.rs  event_sync_subscriptions.rs  logger.rs  message_state.rs  mod.rs  model.rs  msg.rs  program.rs  subscriptions.rs  tea_model.rs  tea_update.rs  tea_view.rs  terminal.rs  text_wrapper.rs  tracing_macros.rs  ui_terminal.rs  update.rs  view.rs  view_model_context.rs
src/app/components/: mod.rs  text_input.rs
src/app/ui_components/: attachment_display.rs  banner.rs  block.rs  file_picker.rs  inline_renderer.rs  message_history.rs  message_log.rs  message_part.rs  mod.rs  modal_file_selector.rs  modal_selector.rs  modal_session_selector.rs  paragraph.rs  popover_selector.rs  status_bar.rs  terminal.rs  (+1 more)
src/sdk/: README.md  client.rs  discovery.rs  error.rs  mod.rs  session_manager.rs
src/storybook/: mock_model.rs  mod.rs
tests/: README.md  file_tests.rs  sdk_wrapper_tests.rs  search_tests.rs  session_tests.rs  simple_smoke_test.rs  smoke_tests.rs
tests/common/: assertions.rs  mod.rs  server.rs
(+6 files in other folders)
