[package]
name = "opencoders"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"  # uses crossterm 0.28.1

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.1"

opencode-sdk = { path = "./opencode-sdk" }
throbber-widgets-tui = "=0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
tracing-appender = "0.2.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[lints.rust]
# Temporary during development
unused_imports = "allow"
dead_code = "allow"
