[package]
name = "opencoders"
version = "0.1.0"
edition = "2021"
default-run = "opencoders"

[[bin]]
name = "opencoders"
path = "src/main.rs"

[dependencies]
# OpenAPI server
opencode-sdk = { path = "./opencode-sdk" }

# TUI
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] } # uses crossterm 0.28.1
throbber-widgets-tui = "=0.8.0"
tui-textarea = { version = "0.7.0", features = ["ratatui"] }
owo-colors = "4.0"

# server traffic
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.1"
rand = "0.8"

# errors and recovery and logging
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
tracing-appender = "0.2.3"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[[bin]]
name = "storybook"
path = "src/bin/storybook.rs"

[lints.rust]
#dead_code = "allow" # Temporary during development
